# Challenge_Natixis_NLP_Finance

./: .gitignore  README.md  exploratory_analysis.ipynb  preproc_functions.py  pyproject.toml  res_baseline.csv
notebooks/: baseline.ipynb  data_augmentation.ipynb  data_deepnn.ipynb  data_model.ipynb  data_preprocessing.ipynb  exploratory_analysis.ipynb  sentiment_analysis (1).ipynb  sentiment_analysis.ipynb  transformers_sentiment_analysis.ipynb
src/nlp_dauphine/: __init__.py  dataset.py  embeddings.py  eval.py  model.py  preprocess_data.py  preprocess_texts.py  preprocess_time_series.py  training.py  utils.py
