[tool.poetry]
name = "nlp_dauphine"
version = "0.1.0"
description = "Dauphine Challenge"
authors = ["Thomas FLOURENT", "Hugo DEBES", "Matthieu LE COSSEC", "Lucas DUCHASSIN"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
contractions = "^0.1.73"
nltk = "^3.8.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
category-encoders = "^2.6.0"
textblob = "^0.17.1"
langdetect = "^1.0.9"
deep-translator = "^1.10.1"
wordcloud = "^1.8.2.2"
transformers = "^4.26.1"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"